- сохранение статьи с картинкой